Initial commit. 3 HTML pages and 1 stylesheet.

--- a/index.html
+++ b/index.html
@@ -3,29 +3,49 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>My First Page</title>
+  <title>Josh Garman</title>
+  <meta name="author" content="Josh Garman">
+  <meta name="description" content="This page provides an introduction to Josh Garman as a web developer. It provides a way to contact Josh Garman and also provides a place to view Josh Garman's portfolio.">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-
-  <!-- Header -->
-  <h1>Hello World!</h1>
-
-  <!-- Image -->
-  <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
-  <br>
-
-  <!-- Link with New Tab -->
-  <a href="https://www.google.com" target="_blank">Opens new tab</a>
-  <br>
-
-  <!-- Bold Link -->
-  <strong><a href="https://www.youtube.com">This is a bold link</a></strong>
-  <br>
-
-  <!--Placeholder link-->
-  <a href="#">This is a placeholder link, goes no where, for now</a>
-
+    <header>
+      <div class="top_content">
+        <div class="logo">
+          <h1>Josh Garman</h1>
+        </div>
+        <div class="links">
+          <nav>
+            <ul class="nav_list">
+              <li><a class="link" href="#">About</a></li>
+              <li><a class="link" href="portfolio.html">Portfolio</a></li>
+              <li><a class="link" href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div> 
+      </div>
+    </header>
+    <div class="content">
+      <main>
+        <div class="about_me">
+          <h2>About Me</h2>
+          <img class="josh_garman_photo" src="assets/images/josh_garman.jpg" alt="Josh Garman" />
+          <section>
+            <p>This is the about me section of the about me. I'm putting in some test text here until I can write something more real about myself. Mostly, I'm just trying to figure out how to structure this HTML code, which is really, really difficult. I think we should have spent longer on HTML at the beginning of the bootcamp as it is the most important building block to everything else. I really need to write some more text to see if this thing wraps. I know I should use the lorem ipsum things but its kinda nice to not be coding for a minute. I really should have stopped and got a beer on my way home.</p>
+            <p>Here is some more text about me, but not about me. Maybe here I will talk about where I work currently and what I do. Here's more text. More, so much more, text. It's very fun. I am finally starting to kind of get it, but some of it is just working now and I'm not 100% sure why.</p>
+            <p>Here is a final section of text in the about me. Maybe here I'll talk about my hopes, dreams, and aspirations. Or, I'll write about my dog and how much I love him despite how much he also annoys me sometimes as he is very emotional and needy.</p>
+          </section> 
+        </div>
+      </main>
+    </div>
+    <div class="footer_flex">
+      <footer class="footer">
+        <div class="footer_content">
+        ©Copyright 2019 by Josh Garman. All rights reserved.
+        </div>
+      </footer>
+    </div>
 </body>
-
 </html>
+
